--- a/app/src/main/assets/tel.html
+++ b/app/src/main/assets/tel.html
@@ -18,16 +18,30 @@
 	cursor: pointer;
 	text-decoration: none;
 }
+#mobileElem {
+	position: absolute;
+	top: 35%;
+	left: 50%;
+	cursor: pointer;
+	text-decoration: none;
+}
 </style>
 </head>
 <body>
     <span id="hideElem">隐藏内容</span>
     <a id="telElem" href="tel:10086" title="拨号10086">10086</a>
+    <a id="mobileElem" href="javascript:;" onclick="mobile()">移动端调用</a>
 </body>
 <script>
 	// 获取电话号码
 	function getTel() {
 		return document.getElementById('telElem').innerHTML;
+	};
+	// 移动设备调用
+	function mobile() {
+        var tel = document.getElementById('telElem').innerHTML;
+        // 调用android本地方法
+        window.jsObj.clickOnAndroid(tel);
 	};
 </script>
 </html>
